# myfeed

./: .bumpversion.toml  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: newsletter.yml  release-python-package.yaml
.llamabot/: message_log.db
docs/releases/: v0.1.1.md  v0.1.2.md
myfeed/: agent.py  config.py  email_sender.py  generator.py  scheduler.py
notebooks/: README.md  test_scrape_papers.py
src/: __init__.py  config.py  email_sender.py
tests/: test_scrape_papers.py
