[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myfeed"
version = "0.1.1"
description = "AI-powered newsletter system using LangGraph"
authors = [{name = "Matthieu", email = "matthieu@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "dotenv>=0.9.9",
    "langchain-mcp-adapters>=0.2.1",
    "pydantic-settings>=2.12.0",
    "marimo>=0.19.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.1",
]

[project.scripts]
myfeed = "main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
